# multiversx-wine-dapp

./: .env.example  .gitignore  README.md  package.json
contracts/wine-marketplace/: Cargo.toml
contracts/wine-marketplace/meta/src/: main.rs
contracts/wine-marketplace/src/: lib.rs
contracts/wine-registry/: Cargo.toml
contracts/wine-registry/meta/src/: main.rs
contracts/wine-registry/src/: lib.rs
