[package]
name = "wine-marketplace"
version = "0.1.0"
edition = "2021"
authors = ["George Pricop <george@example.com>"]
license = "MIT"
description = "Wine Marketplace Smart Contract with Escrow and Auctions"

[lib]
name = "wine_marketplace"
crate-type = ["cdylib"]

[dependencies]
multiversx-sc = "0.50.4"
multiversx-sc-derive = "0.50.4"

[dev-dependencies]
multiversx-sc-scenario = "0.50.4"

[[bin]]
name = "wine-marketplace-meta"
path = "meta/src/main.rs"

[workspace]